--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 :root {
     --primary-color: #424242;
-    --secondary-color: #ffa000;
-    --terciary-color: #ff6f00;
     --light-color: #fafafa;
 }
 
@@ -41,7 +39,8 @@ h1 {
 }
 
 .footer {
-    position: absolute;
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
     height: 50px; /* Set the fixed height of the footer here */
@@ -74,4 +73,17 @@ h1 {
 .permalink a:hover {
     color: grey;
     text-decoration: underline;
+}
+
+.date {
+    color: grey;
+    font-style: italic;
+    text-align: center;
+    padding: 10px 10px 10px 10px;
+    margin: auto;
+    transition: 1s ease;
+}
+
+.date:hover {
+    color: var(--danger);
 }
